main/default/objects/Warnings__c/Warnings__c.object-meta.xml
<CustomObject>
    <label>Warnings</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Warning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>