main/default/objects/Warnings__c/fields/Main_Profession__c.field-meta.xml
<CustomField>
    <fullName>Main_Profession__c</fullName>
    <formula>TEXT(UW_Analysis_Template__r.Criteria__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Profession</label>
    <type>Text</type>
</CustomField>