main/default/objects/Warnings__c/fields/Percent_exceeded__c.field-meta.xml
<CustomField>
    <fullName>Percent_exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percent exceeded</label>
    <type>Checkbox</type>
</CustomField>