main/default/objects/Warnings__c/fields/Rating_Modifier_Template__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rating Modifier Template</label>
    <referenceTo>Rating_Modifier_Template__c</referenceTo>
    <relationshipLabel>Warnings</relationshipLabel>
    <relationshipName>Warnings_RMT</relationshipName>
    <type>Lookup</type>
</CustomField>