main/default/objects/Warnings__c/fields/Warning_Text__c.field-meta.xml
<CustomField>
    <fullName>Warning_Text__c</fullName>
    <label>Warning Text</label>
    <type>TextArea</type>
</CustomField>