main/default/objects/Warnings__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <formula>IF(ISBLANK(UW_Analysis_Template__c),&apos;-&apos;, UW_Analysis_Template__r.UW_Analysis_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type</label>
    <type>Text</type>
</CustomField>