main/default/objects/Warnings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Main_Profession__c</columns>
    <columns>Work_Type__c</columns>
    <columns>UW_Analysis_Template__c</columns>
    <columns>Warning_Text__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>